# bluos-api-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: get_status.rs  showcase.rs
src/: device.rs  discover.rs  error.rs  lib.rs
src/device/: command.rs  responses.rs  status.rs
