[package]
name = "bluos-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"
futures = "0.3.19"
reqwest = "0.11.9"
serde-xml-rs = "0.5.1"
zeroconf = {version= "0.10.2", optional=true}

[dev-dependencies]
anyhow = "1.0.53"

[features]
default = ["discover"]
discover = ["tokio", "zeroconf"]