[package]
name = "bluos-api-rs"
version = "1.1.1"
edition = "2021"
license = "MIT"
keywords = ["bluos", "control", "api"]
categories = ["api-bindings"]
description = "BluOS API wrappers for Rust"
repository = "https://github.com/coral/bluos-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"], optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"
futures = "0.3.19"
reqwest = "0.11.9"
serde-xml-rs = "0.5.1"
zeroconf = {version= "0.10.2", optional=true}

[dev-dependencies]
anyhow = "1.0.53"

[features]
default = ["discover"]
discover = ["tokio", "zeroconf"]
